--- a/src/component/Projects.css
+++ b/src/component/Projects.css
@@ -11,13 +11,16 @@
     padding: 0 86px;
 }
 
+.carousel{
+    box-shadow:0;height:599px;
+}
 .Card{
         background-color: #ecf0f3;
         width: 440px;
         height: 500px;
         padding: 15px;
         margin-bottom: 12px;
-        box-shadow: inset 5px 5px 12px #ffffff,5px 5px 12px rgba(0,0,0,.16);
+        /* box-shadow: inset 5px 5px 12px #ffffff,5px 5px 12px rgba(0,0,0,.16); */
     
 }
 .Card:hover{
@@ -30,6 +33,7 @@
 }
 .Card h3{
     margin: 12px 0;
+    text-align: center;
 }
 .container{
     padding: 0 130px;
@@ -81,6 +85,9 @@
     .container p{
         font-size: 18px;
     }
+    .carousel{
+        height: 459px;
+    }
 
 }
 
@@ -88,6 +95,9 @@
     .Card{
         width: 383px;
        
+    }
+    .Card p{
+        display: none;
     }
 
 
