--- a/src/component/Projects.css
+++ b/src/component/Projects.css
@@ -16,7 +16,7 @@
     box-shadow:0;height:599px;
 }
 .Card{
-        background-color: #ecf0f3;
+        /* background-color: #ecf0f3; */
         width: 440px;
         height: 500px;
         padding: 15px;
